# darts-heterogeneous

./: README.md
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda2.3.2.1/backup/20171117/: CMakeLists.txt
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/: CMakeLists.txt  readme.txt
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.1/: CMakeLists.txt  StencilCuda.cu  StencilMain.cpp  StencilTP.cpp  StencilTP.h  conf.h  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.2/: CMakeLists.txt  StencilCPUKernel.cpp  StencilMain.cpp  StencilTP.cpp  StencilTP.h  launch_weak.pl
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.2i/: CMakeLists.txt  StencilCPUKernel.h  StencilCuda.cu  StencilMain.cpp  StencilTP.cpp  StencilTP.h  launch_weak_nvprof.pl  launch_weak_nvprof_metric.pl  launch_weak_nvprof_trace.pl  launch_weak_operf.pl  launch_weak_operf_ccsl.pl  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.2i.p/: CMakeLists.txt  StencilCPUKernel.cpp  StencilTP.cpp
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.2i.s/: CMakeLists.txt  StencilMain.cpp  StencilTP.cpp  StencilTP.h  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.3i/: 1.txt  DARTS.h  StencilCPUKernel.cpp  StencilMain.cpp  StencilTP.cpp  StencilTP.h  conf.h  launch_weak_nvprof_trace.pl  launch_weak_t3.pl  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.3i/1/: StencilMain.cpp  StencilTP.cpp  StencilTP.h  launch_weak.pl  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.3i/back/: StencilCPUKernel.cpp  StencilTP.cpp  launch_weak_nvprof_trace.pl  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.4i/: CMakeLists.txt  StencilCPUKernel.h  StencilMain.cpp  StencilTP.cpp  StencilTP.cpp2  StencilTP.h  conf.h  launch_weak_nvprof_trace.pl  process_data_weak.pl  process_nvprof_trace_server.pl  stencil.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.4i/1/: StencilTP.cpp1  StencilTP.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.4i/back/: StencilMain.cpp  StencilTP.h
omp2cd-master3/darts-x86/example/GpuTest/StencilCuda3D/StencilCuda3D_7Points.5i/: CMakeLists.txt  StencilCPUKernel.cpp  StencilCPUKernel.h  StencilCuda.cu  StencilMain.cpp  StencilTP.cpp  StencilTP.h  launch_weak_nvprof_trace1.pl  stencil.h
omp2cd-master_streaming_heterogeneous/darts-x86/example/: CMakeLists.txt
omp2cd-master_streaming_heterogeneous/darts-x86/example/Fib-o2d/: fib-o2d.cpp  fib-o2d.cpp.bak.oct1
omp2cd-master_streaming_heterogeneous/darts-x86/example/GpuTest/: CMakeLists.txt
omp2cd-master_streaming_heterogeneous/darts-x86/example/GpuTest/Hello/: CMakeLists.txt  Hello_cuda.cu  Hello_cuda.h
omp2cd-master_streaming_heterogeneous/darts-x86/example/GpuTest/Hello2/: CMakeLists.txt  HelloTP.cpp  Hello_cuda.cu
omp2cd-master_streaming_heterogeneous/darts-x86/example/GpuTest/StencilCuda3D/: CMakeLists.txt
omp2cd-master_streaming_heterogeneous/darts-x86/example/GpuTest/vectorAdd/: CMakeLists.txt
omp2cd-master_streaming_heterogeneous/darts-x86/example/Lulesh/Lulesh_v1/: CalcAccelerationForNodesTP.cpp  CalcCourantConstraintForElemsTP.h  CalcMonotonicQRegionForElemsTP.cpp  CalcPositionForNodesTP.cpp  CalcPressureForElemsTP.h  CalcTimeConstraintsForElemsTP.h  EvalEOSForElemsTP.cpp  InitStressTermsForElemsTP.h  IntegrateStressForElemsP2TP.cpp  LagrangeElementsTP.cpp  lulesh.h  luleshMain_v11.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Lulesh/Lulesh_v1/tmp/1/: LagrangeLeapFrogTP.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Lulesh/Lulesh_v1T/: CalcAccelerationForNodesTP.h  CalcHourglassControlForElemsTP.h  CalcHydroConstraintForElemsTP.h  CalcLagrangeElementsP2TP.h  CalcMonotonicQRegionForElemsTP.h  CalcPositionForNodesTP.cpp  CalcPositionForNodesTP.h  CalcPressureForElemsTP.cpp  CalcQForElemsTP.cpp  CalcSoundSpeedForElemsTP.cpp  CalcVelocityForNodesTP.h  EvalEOSForElemsP1TP.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Lulesh/Lulesh_v1T/orig/: Makefile
omp2cd-master_streaming_heterogeneous/darts-x86/example/Lulesh/Lulesh_v1TDB/: ApplyAccelerationBoundaryConditionsForNodesTP.cpp  CalcFBHourglassForceForElemsTP.h  CalcForceForNodesTP.h  CalcQForElemsTP.cpp  CalcTimeConstraintsForElemsTP.cpp  EvalEOSForElemsP1TP.cpp  EvalEOSForElemsTP.cpp  InitStressTermsForElemsTP.cpp  IntegrateStressForElemsP2TP.h  IntegrateStressForElemsTP.h  LagrangeElementsTP.cpp  LagrangeLeapFrogTP.cpp  LagrangeNodalTP.cpp  UpdateVolumesForElemsTP.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_InPlace_ASYN/: Stencil2D_main.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_InPlace_ASYN_Tps_M2/backup/: Stencil2D_main.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_InPlace_FineGrain_M2/: Stencil2DKernel.cpp  Stencil2DRowDecomposition.h  Stencil2D_main.cpp
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_InPlace_FineGrain_M2V2/: CMakeLists.txt  Stencil2DRowDecomposition.cpp  Stencil2DRowDecomposition.h
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_Naive/: CMakeLists.txt  Stencil2DKernel.cpp  Stencil2DKernel.h
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Stencil2D_Naive_Tps_Ptr/: CMakeLists.txt  SIMPLIFYING_DARTS.h  Stencil2DRowDecomposition.h
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Test/: CMakeLists.txt
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Test/TestFG/: TestFGTP.cpp  TestFGTP.h  launch_strong4.pl
omp2cd-master_streaming_heterogeneous/darts-x86/example/Stencil2D/Test/TestReset/: CMakeLists.txt  TestReset.cpp  TestResetMain.cpp
other_code/stencil_other_code/Stencil3D7pt/StencilCUDA/: CMakeLists.txt  timer.c
(+32726 files in other folders)
