#add_subdirectory (AbsMac)
#add_subdirectory (FastMergesort)
#add_subdirectory (Fib)
#add_subdirectory (Fib-o2d)
#add_subdirectory (MatrixVector)
#add_subdirectory (Mergesort)
#add_subdirectory (mm)
#add_subdirectory (Stencil)
#add_subdirectory (Stencil2D)
#add_subdirectory (Lulesh)
add_subdirectory (GpuTest)
