#add_subdirectory (TestS1)
#add_subdirectory (Hello)
#add_subdirectory (Hello2)
#add_subdirectory (vectorAdd)
#add_subdirectory (StencilCuda)
#add_subdirectory (StencilCuda2)
#add_subdirectory (StencilCuda2.1)
#add_subdirectory (StencilCuda2.2)
#add_subdirectory (StencilCuda2.3)
#add_subdirectory (StencilCuda2.3.1)
#add_subdirectory (StencilCuda2.3.1.1)
#add_subdirectory (StencilCuda2.3.1.2)
#add_subdirectory (StencilCuda2.3.2.1)
#add_subdirectory (StencilCuda2.3.2.2)
#add_subdirectory (StencilCuda2.3.2.2.p)
#add_subdirectory (StencilCuda2.4)
add_subdirectory (StencilCuda2D)
#add_subdirectory (StencilCuda3D)

