
#add_subdirectory (StencilCuda3D_7Points.1)
add_subdirectory (StencilCuda3D_7Points.2)
add_subdirectory (StencilCuda3D_7Points.2i)
add_subdirectory (StencilCuda3D_7Points.2i.s)
add_subdirectory (StencilCuda3D_7Points.3i)
add_subdirectory (StencilCuda3D_7Points.4i)
add_subdirectory (StencilCuda3D_7Points.5i)